<resources>
    <string name="app_name">Intuition Network</string>
    <string name="quiz_title">who will won the next Pubg International invitational?</string>
    <string name="quiz_desc">bla bla bla bla</string>
    <string name="quiz_count">100</string>
    <string name="nav_quiz">QUIZ</string>
    <string name="nav_leaderboard">LEADERBOARD</string>
    <string name="nav_me">ME</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">User Name</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="password_hint">Password</string>
    <string name="action_login">Sign in/Sign on</string>
    <string name="action_register">Register</string>
    <string name="password_dialog_confirm">OK</string>
    <string name="acquire_password_message">Already sent an email to you, please modify the password by the link in the email!</string>>
    <string name="pz_content_desc_logo">Orange Logo</string>
    <string name="prophet_about">Intuition Network gathers people who is avid and good at prediction. We give one puzzle question every day or two, user can participate and give their choice. The correct answer will be the option chosen most by user. It bring bit fun and bit relaxing to people in this chaotic world.</string>
</resources>