<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/activity_login"
android:background="#ececf1"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_margin="16dp">

<LinearLayout
    android:id="@+id/inputText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="200dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="100"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLength="100"
        android:textSize="25sp" />
</LinearLayout>

<LinearLayout
    android:id="@+id/checkbox_option"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/inputText">

    <CheckBox
        android:id="@+id/remember_password"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Remember password" />

    <CheckBox
        android:id="@+id/login_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:text="auto login" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/checkbox_option">

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/action_login"
        style="?android:attr/borderlessButtonStyle"
        android:backgroundTint="#6AA571" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/action_register"
        style="?android:attr/borderlessButtonStyle"
        android:backgroundTint="#6AA571" />
</LinearLayout>
</RelativeLayout>